fixed overlap of nav onto show

--- a/app/assets/stylesheets/general/home.scss
+++ b/app/assets/stylesheets/general/home.scss
@@ -12,6 +12,7 @@
   background-color: #A8C898;
   width: 100%;
   height: 201px;
+  top: 47px; //this will need to be changed when repositioning general navigation
   z-index: -1;
 }
 
@@ -25,6 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 47px; //this will need to be changed when repositioning general navigation
 }
 
 #greeting {
